[package]
name = "graph-search"
description = "Graph search benchmark for distance estimation models"
version = "0.1.0"
repository = "https://github.com/ammrat13/wikiracer-embeddings"
authors = ["Ammar Ratnani <ammrat13@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
argparse = "0.2.2"
bson = "2.13.0"
csv = "1.3.1"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
serde = "1.0.215"
tch = "0.18.0"
yaml-rust = "0.4.5"

[[bin]]
name = "astar"

[[bin]]
name = "greedywalk"
